@@ -647,7 +647,6 @@ dav_guitar_reset (BseSource *source)
 }
 
 /* --- Export to DAV --- */
-#include "./icons/noicon.c"
 BSE_EXPORTS_BEGIN (BSE_PLUGIN_NAME);
 BSE_EXPORT_OBJECTS = {
   { &type_id_guitar, "DavGuitar", "BseSource",
@@ -655,9 +654,6 @@ BSE_EXPORT_OBJECTS = {
     "Any commercial use of this module requires a license from Stanford University",
     &type_info_guitar,
     "/Modules/Guitar",
-    { NOICON_BYTES_PER_PIXEL | BSE_PIXDATA_1BYTE_RLE,
-      NOICON_WIDTH, NOICON_HEIGHT,
-      NOICON_RLE_PIXEL_DATA, },
   },
   { NULL, },
 };
