@@ -8,7 +8,6 @@ icon_list += chorus.c
 icon_list += drum.c
 icon_list += filter.c
 icon_list += genosc.c
-icon_list += noicon.c
 icon_list += noise.c
 icon_list += organ.c
 icon_list += osc.c
@@ -16,6 +15,7 @@ icon_list += pipe.c
 icon_list += prod.c
 icon_list += sequencer.c
 icon_list += sine.c
+icon_list += snooper.c
 icon_list += speaker.c
 icon_list += sub.c
 icon_list += sum.c
@@ -29,7 +29,6 @@ icon_list += drum.xcf
 icon_list += filter.xcf
 icon_list += foo.xcf
 icon_list += genosc.xcf
-icon_list += noicon.xcf
 icon_list += noise.xcf
 icon_list += organ.xcf
 icon_list += osc.xcf
@@ -37,6 +36,7 @@ icon_list += pipe.xcf
 icon_list += prod.xcf
 icon_list += sequencer.xcf
 icon_list += sine.xcf
+icon_list += snooper.xcf
 icon_list += speaker.xcf
 icon_list += sub.xcf
 icon_list += sum.xcf
